adding two test scripts to testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,6 @@ set(CMAKE_CXX_STANDARD 17)
 
 project(gwas_run)
 
-# Set the output folder where your program will be created
-#set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
-set(CMAKE_BINARY_DIR bin/)
-
 #find_package( ZLIB REQUIRED )
 
 ### Add the executables
@@ -38,8 +34,11 @@ add_executable(gwas_decompress
 
 add_executable(test_gwas
         test/test_gwas.cpp
-        test/test_compress.cpp
-        test/test_decompress.cpp)
+        test/test_utils.cpp
+        src/utils.cpp
+        test/test_index.cpp
+        src/index.cpp
+        src/decompress.cpp)
 
 add_subdirectory(/Users/krsc0813/CLionProjects/gwas_local/lib/googletest-1.14.0/ googletest-1.14.0)
 
@@ -55,5 +54,5 @@ include_directories(lib/googletest-1.14.0)
 target_link_libraries(gwas_compress z)
 target_link_libraries(gwas_index z)
 target_link_libraries(gwas_decompress z)
-target_link_libraries(test_gwas gtest gtest_main)
+target_link_libraries(test_gwas gtest gtest_main z)
 
