added default Indexer constructor & pval integration!!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,11 +41,14 @@ add_executable(gwas_compress
 # INDEXING
 add_executable(gwas_index
         src/index_main.cpp
-        src/indexers.cpp
+        src/abstract_index/indexers.cpp
         src/decompress.cpp
         src/header.cpp
         src/index.cpp
-        src/utils.cpp)
+        src/utils.cpp
+        src/abstract_index/indexers.cpp
+        src/abstract_index/build_index.cpp
+        src/abstract_index/query_index.cpp)
 
 # DECOMPRESSION
 add_executable(gwas_decompress
@@ -53,7 +56,10 @@ add_executable(gwas_decompress
         src/decompress.cpp
         src/header.cpp
         src/index.cpp
-        src/utils.cpp)
+        src/utils.cpp
+        src/abstract_index/indexers.cpp
+        src/abstract_index/query_index.cpp
+        src/abstract_index/build_index.cpp)
 
 # TESTING
 add_executable(test_gwas
