--- a/config_files/test_config.yml
+++ b/config_files/test_config.yml
@@ -1,7 +1,7 @@
 gwas_file:
   gwas_files/test.tsv
 block_size:
-  10
+  map_files/test.map
 query_type:
   coordinate
 query_coordinate:
@@ -9,4 +9,4 @@ query_coordinate:
 query_statistic:
   p_value:0.3
 codecs:
-  zlib,zlib,zlib,zlib,zlib,zlib,zlib,zlib,zlib,zlib
+  zstd,zstd,zstd,zstd,zstd,zstd,zstd,zstd,zstd,zstd
