46 tests passing, 2 failing, 3 not compiling

--- a/config_files/new_test_config.yml
+++ b/config_files/new_test_config.yml
@@ -2,10 +2,10 @@ gwas_file:
   /Users/krsc0813/CLionProjects/gwas_local/gwas_files/test.tsv
 
 block_size:
-  /Users/krsc0813/CLionProjects/gwas_local/map_files/test.map
+  5
 
 out_directory:
-  kristen_out
+  test_block5_zlib
 
 query:
   genomic:
