--- a/config_files/new_test_config.yml
+++ b/config_files/new_test_config.yml
@@ -1,11 +1,11 @@
 gwas_file:
-  /Users/krsc0813/CLionProjects/gwas_local/gwas_files/test.tsv
+  /Users/krsc0813/Desktop/gwas/pan_ukbb/continuous-22409-both_sexes-irnt.tsv
 
 block_size:
-  5
+  20000
 
 out_directory:
-  test_block5_zlib
+  ukbb_block20000_zlib
 
 query:
   genomic:
