--- a/config_files/new_test_config.yml
+++ b/config_files/new_test_config.yml
@@ -1,11 +1,11 @@
 gwas_file:
-  /Users/krsc0813/Desktop/gwas/pan_ukbb/continuous-22409-both_sexes-irnt.tsv
+  /Users/krsc0813/CLionProjects/gwas_local/gwas_files/test.tsv
 
 block_size:
-  map_files/chrm_1-22.map
+  5
 
 out_name:
-  bz2
+  zlib
 
 query:
   genomic:
@@ -22,8 +22,8 @@ extra_indices:
 
 codecs:
   int:
-    bz2
+    zlib
   float:
-    bz2
+    zlib
   string:
-    bz2
+    zlib
