--- a/config_files/ukbb_config.yml
+++ b/config_files/ukbb_config.yml
@@ -10,12 +10,12 @@ out_name:
 query:
   genomic:
     /Users/krsc0813/CLionProjects/gwas_local/gwas_files/hg19.protein_coding.bed
-  pval:
-    7,<= 5e-8
-  other:
-    None
-  uncertainty:
-    None
+  col_idx:
+    7
+  bins:
+    5e-1, 5e-5, 5.1e-8
+  threshold:
+    <= 5e-8
 
 extra_indices:
   pval
