--- a/config_files/ukbb_config.yml
+++ b/config_files/ukbb_config.yml
@@ -1,11 +1,11 @@
 gwas_file:
-  /Users/krsc0813/Desktop/gwas/pan_ukbb/continuous-22409-both_sexes-irnt.tsv
+  /Users/krsc0813/Desktop/gwas/pan_ukbb/ukbb_22409/continuous-22409-both_sexes-irnt.tsv
 
 block_size:
-  10000
+  map_files/chrm_1-22.map
 
 out_name:
-  zstd
+  deflate
 
 query:
   genomic:
@@ -22,8 +22,8 @@ extra_indices:
 
 codecs:
   int:
-    zstd
+    deflate
   float:
-    zstd
+    deflate
   string:
-    zstd
+    deflate
