--- a/config_files/ukbb_config.yml
+++ b/config_files/ukbb_config.yml
@@ -1,29 +1,29 @@
 gwas_file:
-  /Users/krsc0813/Desktop/gwas/pan_ukbb/ukbb_22409/continuous-22409-both_sexes-irnt.tsv
+  /Users/krsc0813/CLionProjects/gwas_local/gwas_files/icd10-E11-both_sexes.tsv
 
 block_size:
   10000
 
 out_name:
-  zstd
+  bz2
 
 query:
   genomic:
-    /Users/krsc0813/CLionProjects/gwas_local/gwas_files/ukbb.bed
+    /Users/krsc0813/CLionProjects/gwas_local/gwas_files/hg19.protein_coding.bed
   col_idx:
-    7
+    9
   bins:
-    5e-1, 5e-5, 5.1e-8
+    0.3, 4.3, 7.29
   threshold:
-    <= 5e-8
+    >= 7.3
 
 extra_indices:
   pval
 
 codecs:
   int:
-    zstd
+    bz2
   float:
-    zstd
+    bz2
   string:
-    zstd
+    bz2
