--- a/config_files/ukbb_config.yml
+++ b/config_files/ukbb_config.yml
@@ -5,7 +5,7 @@ block_size:
   10000
 
 out_name:
-  bz2
+  xz
 
 query:
   genomic:
@@ -17,13 +17,13 @@ query:
   threshold:
     >= 7.3
 
-extra_indices:
+extra_index:
   pval
 
 codecs:
   int:
-    bz2
+    xz
   float:
-    bz2
+    xz
   string:
-    bz2
+    xz
