--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,12 @@
 cmake_minimum_required(VERSION 3.27)
 
-set(CMAKE_PREFIX_PATH "/Users/krsc0813/miniforge3/envs/test")
-
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_INSTALL_PREFIX "./bin")
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-project(gwas_run)
+project(stabix)
 
 ## Link directories
 add_subdirectory(lib/FastPFor)
@@ -83,3 +81,16 @@ target_link_libraries(gwas_compress bxzstr FastPFOR z)
 target_link_libraries(gwas_index bxzstr FastPFOR z)
 target_link_libraries(gwas_decompress bxzstr FastPFOR z)
 #target_link_libraries(test_gwas gtest gtest_main bxzstr FastPFOR z)
+
+# Regarding python bindings
+
+set(PYBIND11_FINDPYTHON ON)
+add_subdirectory(lib/pybind11)
+
+file(GLOB_RECURSE SOURCES "src/*.cpp")
+file(GLOB_RECURSE ENTRYPOINT_SOURCES "src/*_main.cpp")
+list(REMOVE_ITEM SOURCES ${ENTRYPOINT_SOURCES})
+
+pybind11_add_module(stabix MODULE ${SOURCES})
+target_link_libraries(stabix PRIVATE bxzstr FastPFOR z)
+install(TARGETS stabix DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/py)
