--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 project(stabix)
 
 ## Link directories
+add_subdirectory(lib/pybind11)
 add_subdirectory(lib/FastPFor)
 add_subdirectory(lib/bxzstr)
 if(NOT TARGET gmock)
@@ -19,10 +20,10 @@ endif()
 
 ## Include directories
 include_directories(include)
-include_directories(lib)
 include_directories(lib/FastPFor/headers)
-include_directories(lib/bzxstr/include)
-include_directories(lib/googletest/googletest/include)
+#include_directories(lib/bzxstr/include)
+#include_directories(lib/googletest/googletest/include)
+include_directories(lib/pybind11/include/pybind11)
 
 ### Add the executables
 # COMPRESSION
@@ -74,12 +75,6 @@ add_executable(gwas_decompress
 #        src/blocks.cpp
 #        test/test_blocks.cpp)
 
-# Additional configuration if needed, e.g., linking libraries, "adding -lz"
-#target_link_libraries(gwas_compress bxzstr z)
-#target_link_libraries(gwas_index bxzstr z)
-#target_link_libraries(gwas_decompress bxzstr z)
-#target_link_libraries(test_gwas gtest gtest_main bxzstr z)
-
 target_link_libraries(gwas_compress bxzstr FastPFOR z)
 target_link_libraries(gwas_index bxzstr FastPFOR z)
 target_link_libraries(gwas_decompress bxzstr FastPFOR z)
@@ -87,13 +82,13 @@ target_link_libraries(gwas_decompress bxzstr FastPFOR z)
 
 # Regarding python bindings
 
-set(PYBIND11_FINDPYTHON ON)
-add_subdirectory(lib/pybind11)
-
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 file(GLOB_RECURSE ENTRYPOINT_SOURCES "src/cli/*.cpp")
 list(REMOVE_ITEM SOURCES ${ENTRYPOINT_SOURCES})
 
-pybind11_add_module(stabix MODULE ${SOURCES})
-target_link_libraries(stabix PRIVATE bxzstr FastPFOR z)
-install(TARGETS stabix DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/py)
+SET(PYBIND11_PYTHON_VERSION 3.11.7)
+set(PYTHON_EXECUTABLE "/opt/homebrew/bin/python3")
+
+pybind11_add_module(stabixpy MODULE ${SOURCES})
+target_link_libraries(stabixpy PRIVATE bxzstr FastPFOR z pybind11::module)
+set_target_properties(stabixpy PROPERTIES PREFIX "" OUTPUT_NAME "stabix" SUFFIX ".so")
