--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ python_package/stabix.egg-info
 python_package/dist
 # this is a build artifact
 python_package/src/stabix/stabixcore.so
+python_package/src/stabix/__pycache__
