--- a/.gitmodules
+++ b/.gitmodules
@@ -12,5 +12,8 @@
 	url = https://github.com/tmaklin/bxzstr.git
 [submodule "lib/pybind11"]
 	path = lib/pybind11
-	url = https://github.com/pybind/pybind11.git
+	url = git@github.com:pybind/pybind11.git
 	branch = stable
+[submodule "lib/curl"]
+	path = lib/curl
+	url = git@github.com:curl/curl.git
